# e-code

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  .replit  ACCURATE_STATUS_REPORT.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG_AI_UX.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_MCP_CONNECTION.md  COMPLETE_DEPLOYMENT.sh  DATABASE_ARCHITECTURE_GUIDE.md  DATABASE_CHOICE_DECISION.md  DATABASE_CHOICE_RECOMMENDATION.md  DEPLOYMENT.md  DEPLOYMENT_ENHANCED.md  DEPLOYMENT_QUICKSTART.md  DEPLOY_COMPLETE_INFRASTRUCTURE.sh  DEPLOY_REAL_PLATFORM.sh  Dockerfile  Dockerfile.dev  Dockerfile.go-runtime  Dockerfile.python-ml  Dockerfile.user-environment  ENHANCED_FEATURES.md  FIX_CLUSTER_CREATION.sh  FIX_PERMISSIONS.md  FUNCTIONAL_STATUS.md  GKE_DEPLOYMENT_GUIDE.md  GOOGLE_CLOUD_DEPLOYMENT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.js  IMPLEMENTATION_SUMMARY.md  INTERNAL_ARCHITECTURE_DOCS.md  MCP_DEPLOYMENT_GUIDE.md  MISSING_FEATURES_COMPARED_TO_REPLIT.md  MISSING_FEATURES_REPLIT_PARITY.md  MOBILE_RESPONSIVE_DESIGN.md  PLATFORM_COMPLETION_ROADMAP.md  (+124 more)
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.replitdb/: project-2.json  project-4.json
.storybook/: main.ts  preview.ts
attached_assets/: Pasted--1-Add-all-required-environment-variables-to-the-deployment-kubectl-set-env-deployment-e-code-pla-1754587194673_1754587194674.txt  Pasted--1-Get-the-detailed-logs-from-the-crashed-container-kubectl-logs-e-code-platform-76b44b796b-vvc8r--1754586933277_1754586933278.txt  Pasted-ccount-run--1754629862560_1754629862561.txt  (+37 more)
cli/: README.md  build.sh  (+4 more)
(+987 files in other folders)
