[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "nltk>=3.9.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.1",
    "textblob>=0.19.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
